--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
-aiofiles==24.1.0
 aiohttp_cors==0.7.0
 anti_useragent==1.0.10
-certifi==2024.2.2
-certifi==2024.8.30
+beautifulsoup4==4.12.3
 ddddocr==1.5.5
-lxml==4.9.3
-lxml==5.3.0
 openpyxl==3.0.10
 openpyxl==3.1.5
 pyppeteer==2.0.0
+pytest==7.4.0
 Quartz==0.0.1.dev0
-Requests==2.32.3
 tqdm==4.65.0
 tqdm==4.66.5
-urllib3==1.26.20
+traitlets==5.14.3
