--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:electron": "electron-builder build --win --mac",
     "build:frontend": "cd frontend && pnpm run build",
     "build:python": "cd backend && python -m PyInstaller ./api.spec --clean --distpath ./pydist",
-    "package": "electron-builder build --win --linux --mac -c.extraMetadata.main=electron/main.js"
+    "package": "electron-builder build --win --linux --mac -c.extraMetadata.main=electron/main.js",
+    "build:win32": "electron-builder --win --ia32"
   },
   "build": {
     "appId": "com.my-website.my-app",
@@ -27,7 +28,6 @@
         {
           "target": "nsis",
           "arch": [
-            "ia32",
             "x64"
           ]
         }
@@ -56,7 +56,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "electron": "^32.0.1",
+    "electron": "21.0.0",
     "electron-builder": "^24.13.3",
     "wait-on": "^8.0.0"
   }
