feat: add 网页关税版

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:python": "cd backend && python -m PyInstaller ./api.spec --clean --distpath ./pydist",
     "package": "electron-builder build --win --linux --mac -c.extraMetadata.main=electron/main.js",
     "build:win32": "electron-builder --win --ia32",
-    "build:icon": "electron-icon-builder --input=./public/excel.png --output=public --flatten"
+    "build:icon": "electron-icon-builder --input=./public/excel.png --output=public --flatten",
+    "build:ait": "cd backend && python -m PyInstaller --onefile --noconsole ./ui.py --name \"英国关税自动化处理程序\""
   },
   "build": {
     "appId": "com.pyhone-excel-electron-tool",
